--- a/usr/RL/TestMaze_II/testmaze_ii.ui
+++ b/usr/RL/TestMaze_II/testmaze_ii.ui
@@ -6,70 +6,72 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>558</width>
-    <height>535</height>
+    <width>564</width>
+    <height>552</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>TestMaze_II</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="1" column="1">
+    <widget class="QDockWidget" name="_wConsoleDockWidget">
+     <widget class="QWidget" name="_wConsoleDockWidgetContent">
+      <layout class="QGridLayout" name="gridLayout_4">
+       <item row="1" column="0" rowspan="2">
+        <widget class="QLineEdit" name="_wConsoleInput"/>
+       </item>
+       <item row="0" column="0" colspan="2">
+        <widget class="QPlainTextEdit" name="_wConsoleOutput">
+         <property name="font">
+          <font>
+           <family>Monospace</family>
+          </font>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QPushButton" name="_wBackInHistory">
+         <property name="maximumSize">
+          <size>
+           <width>60</width>
+           <height>18</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>&amp;previous</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QPushButton" name="_wForwardInHistory">
+         <property name="maximumSize">
+          <size>
+           <width>60</width>
+           <height>18</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>&amp;next</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="3">
     <widget class="QGraphicsView" name="graphicsView"/>
    </item>
-   <item row="1" column="0">
-    <widget class="QDockWidget" name="_wConsoleWidget">
-     <property name="features">
-      <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
-     </property>
-     <widget class="QWidget" name="dockWidgetContents">
-      <layout class="QGridLayout" name="gridLayout_3">
+   <item row="1" column="2">
+    <widget class="QDockWidget" name="_wGraphDockWidget">
+     <widget class="QWidget" name="_wGraphDockWidgetContent">
+      <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="0">
-        <widget class="QWidget" name="widget" native="true">
-         <layout class="QGridLayout" name="gridLayout_2">
-          <item row="0" column="0" rowspan="2" colspan="2">
-           <widget class="QPlainTextEdit" name="_wConsoleOutput">
-            <property name="font">
-             <font>
-              <family>Monospace</family>
-             </font>
-            </property>
-            <property name="readOnly">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0" rowspan="2">
-           <widget class="QLineEdit" name="_wConsoleInput"/>
-          </item>
-          <item row="2" column="1">
-           <widget class="QPushButton" name="_wBackInHistory">
-            <property name="maximumSize">
-             <size>
-              <width>60</width>
-              <height>18</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>&amp;previous</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1">
-           <widget class="QPushButton" name="_wForwardInHistory">
-            <property name="maximumSize">
-             <size>
-              <width>60</width>
-              <height>18</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>&amp;next</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
+        <layout class="QGridLayout" name="_lGraphWidgetLayout"/>
        </item>
       </layout>
      </widget>
